--- a/src/Calculator/packages.config
+++ b/src/Calculator/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Gaming.XboxGameBar" version="1.0.200213002-prerelease" targetFramework="native" />
   <package id="Microsoft.UI.Xaml" version="2.2.190830001" targetFramework="native" />
   <package id="Microsoft.WindowsCalculator.PGO" version="1.0.2" targetFramework="native" />
 </packages>
